--- a/friends/index.html
+++ b/friends/index.html
@@ -12,11 +12,11 @@
       <meta name="keywords" content="Nat, welch, natwelch, nathaniel, nathanielwelch, dehn, code, student, developer, software" />
       <meta name="author" content="Nat Welch">
 
-      <link href="../includes/css/style.css" rel="stylesheet" type="text/css" />
       <link rel="shortcut icon" href="/favicon.ico">
-      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-      <link rel="stylesheet" href="includes/css/reset.css?v=3">
-      <link rel="stylesheet" href="includes/css/style.css?v=5">
+      <!--
+      <link rel="stylesheet" href="/includes/css/reset.css?v=3">
+      -->
+      <link rel="stylesheet" href="/includes/css/style.css?v=5">
    </head>
    <body>
       <div id="container">
@@ -44,9 +44,9 @@
       <!--"Why, Mr. Anderson? Why, why, why? Why do you do it? Why, why get up? Why keep fighting? Do you believe you're fighting for something, for more than your survival? Can you tell me what it is, do you even know? Is it freedom, or truth, perhaps peace, could it be for love? Illusions, Mr. Anderson, vagaries of perception. Temporary constructs of a feeble human intellect trying desperately to justify an existence that is without meaning or purpose! And all of them as artificial as the matrix itself, although only a human mind could invent something as insipid as love. You must be able to see it Mr. Anderson, you must know it by now. You can't win, it's pointless to keep fighting! Why, Mr. Anderson, why? Why do you persist?" - Agent Smith -->
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
-      <script src="includes/js/mootools-1.2.4.4-more.js"></script>
-      <script src="includes/js/nat.js?v=5"></script>
-      <script src="includes/js/konami.js?v=1"></script>
+      <script src="/includes/js/mootools-1.2.4.4-more.js"></script>
+      <script src="/includes/js/nat.js?v=5"></script>
+      <script src="/includes/js/konami.js?v=1"></script>
 
       <script>
          var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
