--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       </div>
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
-      <script src="includes/js/mootools-1.2.4.4-more.js"></script>
-      <script src="includes/js/nat.js?v=5"></script>
-      <script src="includes/js/konami.js?v=1"></script>
+      <script src="/includes/js/mootools-1.2.4.4-more.js"></script>
+      <script src="/includes/js/nat.js?v=5"></script>
+      <script src="/includes/js/konami.js?v=1"></script>
       <script>
          var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
          (function(d, t) {
