Chuck Close'ing my photo.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
       <script src="/includes/js/mootools-1.2.4.4-more.js"></script>
-      <script src="/includes/js/nat.js?v=5"></script>
+      <!-- https://github.com/desandro/close-pixelate
+      <script src="/includes/js/close-pixelate.js"></script>
+      -->
+      <script src="/includes/js/nat.js?v=6"></script>
       <script src="/includes/js/konami.js?v=1"></script>
       <script>
          var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
