--- a/friends/index.html
+++ b/friends/index.html
@@ -27,13 +27,14 @@
                <li><a href="http://prenticew.com" rel="friend met co-resident" title="Prentice's Site">Prentice Wongvibulsin</a> - Roommate and an amazing coder and photographer.</li>
                <li><a href="http://dmpatierno.com/" rel="friend met co-worker" title="Dave Patierno">Dave Patierno</a> - Good friend and coworker.</li>
                <li><a href="http://markgius.com/" title="Mark Gius" rel="friend co-resident met" >Mark Gius</a> - Roommate and good friend.</li>
-               <li><a href="http://grantlandchew.com/" rel="friend met" title="Grantland Chew">Grantland Chew</a> - A great coder with an awesome sense of style.</li>
+               <li><a href="http://grantlandchew.com/" rel="friend met" title="Grantland Chew">Grantland Chew</a> - A coder with a strong sense of style.</li>
                <li><a href="http://reedmorse.com/" rel="friend met" title="Reed Morse">Reed Morse</a> - Great designer, entrepreneur and developer.</li>
                <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
                <li><a href="http://aaronbshaw.com/" title="Aaron Shaw" rel="met friend">Aaron Shaw</a> - Probably my oldest friend. Does business type stuff for startups.</li>
+               <li><a href="http://www.dcwelch.com/" title="dad" rel="met parent">David Welch</a></li> - My dad.
+               <li><a href="http://www.sterlinghirsh.com/" title="Sterling" rel="met friend co-worker">Sterling Hirsh</a> - A strong coder and friend from iFixit.</li>
 
                <!-- Commented out until he gets his act together...
-               <li><a href="http://www.dcwelch.com/" rel="met parent">David Welch</a></li>
                <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Dustin Mollo</a> - The man who got me started in Linux and a great friend.</li>
                -->
             </ul>
