--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       </div>
 
       <div id="middle" class="container">
+         Sometimes I write code. Here are some of my most active GitHub projects.
          <div id="repos">
             <ul></ul>
          </div>
