--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
       </div>
 
       <!-- TODO: Upgrade / Store locally. -->
-      <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
-      <script src="/includes/js/mootools-1.2.4.4-more.js"></script>
+      <script src="/includes/js/mootools-1.3.2-core.js"></script>
+      <script src="/includes/js/mootools-1.3.2.1-more.js"></script>
       <!-- https://github.com/desandro/close-pixelate
       <script src="/includes/js/close-pixelate.js"></script>
       -->
-      <script src="/includes/js/nat.js?v=6"></script>
+      <script src="/includes/js/nat.js?v=7"></script>
       <script src="/includes/js/konami.js?v=1"></script>
       <script>
          var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
