Got github working.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,17 @@
       </div>
 
       <div id="middle" class="container">
-         Sometimes I write code. Here are some of my most active GitHub projects.
-         <div id="repos">
-            <ul></ul>
+         <div id="repo_container">
+            <ul id="repos">
+               <h1>Featured Repos</h1>
+            </ul>
+
+            <ul id="other_repos">
+               <h1>Other Repos</h1>
+            </ul>
+            <p id="code_bottom_right">
+            I like to write code. You can check me out on <a href="https://github.com/icco">GitHub</a>, or check out the companies I have worked for: <a href="http://adobe.com">Adobe</a>, <a href="http://www.ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://google.com">Google</a>.
+            </p>
          </div>
       </div>
 
