Adds flickr photos.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
       <div id="bottom" class="container">
          <!-- Flickr photos will go here... -->
+         <ul id="photos">
+         </ul>
       </div>
 
       <!-- TODO: Upgrade / Store locally. -->
