Redesign of mainpage.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
       <link rel="stylesheet" href="includes/css/style.css?v=9">
    </head>
    <body>
-      <div id="top" class="container">
-         <div class="data" id="data1">
+      <div id="box">
+
+         <img src="/i/nathoody.jpg" id="rightinnerbox"/>
+
+         <div id="innerbox">
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a professional software developer.</p>
             <p>I am currently <span id='age'>23</span> years old and love to create things. I have a passion for design, communication, and building communities. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
 
@@ -38,46 +41,15 @@
                <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url">My Twitter</a> </li>
                <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url">My Last.FM</a> </li>
                <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url">My Links <small>(on PinBoard)</small></a> </li>
-               <li class="sortme" id="link-homepage"> <a href="http://natwelch.com" title="Nat Welch Dot Com" rel="me" class="url">My Website</a> </li>
             </ul>
 
-            <p>I am a recent Computer Science graduate from the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly. I am currently employed by <a href="http://getpunchd.com">Punchd Labs Inc.</a></p>
-
-            <p><small><em>* Knighthood self-proclaimed.</em></small></p>
-         </div>
-         <div id="nat">
-            <div id="name">Nat Welch</div>
-            <div id="job">Student, Code Crafter<div id="knight"> &amp; Courageous Knight<sup>*</sup></div></div>
+            <p>I am a recent Computer Science graduate from the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly. I am currently employed by <a href="http://getpunchd.com">Punchd Labs Inc.</a>, a division of <a href="http://google.com">Google</a>.</p>
          </div>
       </div>
 
-      <div id="middle" class="container">
-         <div id="repo_container">
-            <ul id="repos">
-               <h1>Featured Repos</h1>
-            </ul>
-
-            <ul id="other_repos">
-               <h1>Other Repos</h1>
-            </ul>
-            <p id="code_bottom_right">
-            I like to write code. You can check me out on <a href="https://github.com/icco">GitHub</a>, or check out the companies I have worked for: <a href="http://adobe.com">Adobe</a>, <a href="http://www.ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://google.com">Google</a>.
-            </p>
-         </div>
-      </div>
-
-      <div id="bottom" class="container">
-         <!-- Flickr photos will go here... -->
-         <ul id="photos">
-         </ul>
-      </div>
-
-      <!-- TODO: Upgrade / Store locally. -->
+      <!-- TODO: Use a CDN backed by the local store. -->
       <script src="/includes/js/mootools-1.3.2-core.js"></script>
       <script src="/includes/js/mootools-1.3.2.1-more.js"></script>
-      <!-- https://github.com/desandro/close-pixelate
-      <script src="/includes/js/close-pixelate.js"></script>
-      -->
       <script src="/includes/js/nat.js?v=7"></script>
       <script src="/includes/js/konami.js?v=1"></script>
       <script>
