--- a/friends/index.html
+++ b/friends/index.html
@@ -31,24 +31,23 @@
                <li><a href="http://reedmorse.com/" rel="friend met" title="Reed Morse">Reed Morse</a> - Great designer, entrepreneur and developer.</li>
                <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
                <li><a href="http://aaronbshaw.com/" title="Aaron Shaw" rel="met friend">Aaron Shaw</a> - Probably my oldest friend. Does business type stuff for startups.</li>
-               <li><a href="http://www.dcwelch.com/" title="dad" rel="met parent">David Welch</a></li> - My dad.
+               <li><a href="http://www.dcwelch.com/" title="dad" rel="met parent">David Welch</a> - My dad.</li>
                <li><a href="http://www.sterlinghirsh.com/" title="Sterling" rel="met friend co-worker">Sterling Hirsh</a> - A strong coder and friend from iFixit.</li>
 
                <!-- Commented out until he gets his act together...
                <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Dustin Mollo</a> - The man who got me started in Linux and a great friend.</li>
                -->
             </ul>
-            <div id="backButton"><a href=".." title="natwelch.com">&laquo; Go Back Home</a></div>
+            <div id="backButton">&laquo; <a href=".." title="natwelch.com">Go Back Home</a></div>
          </div>
       </div>
 
       <!--"Why, Mr. Anderson? Why, why, why? Why do you do it? Why, why get up? Why keep fighting? Do you believe you're fighting for something, for more than your survival? Can you tell me what it is, do you even know? Is it freedom, or truth, perhaps peace, could it be for love? Illusions, Mr. Anderson, vagaries of perception. Temporary constructs of a feeble human intellect trying desperately to justify an existence that is without meaning or purpose! And all of them as artificial as the matrix itself, although only a human mind could invent something as insipid as love. You must be able to see it Mr. Anderson, you must know it by now. You can't win, it's pointless to keep fighting! Why, Mr. Anderson, why? Why do you persist?" - Agent Smith -->
 
-      <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
-      <script src="/includes/js/mootools-1.2.4.4-more.js"></script>
-      <script src="/includes/js/nat.js?v=5"></script>
-      <script src="/includes/js/konami.js?v=1"></script>
 
+      <script src="/includes/js/mootools-1.3.2-core.js"></script>
+      <script src="/includes/js/mootools-1.3.2.1-more.js"></script>
+      <script src="/includes/js/konami.js?v=1"></script>
       <script>
          var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
          (function(d, t) {
