code is now HTML5 compliant

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <body>
       <div id="box">
 
-         <img src="/i/nathoody.jpg" id="rightinnerbox"/>
+         <img src="/i/nathoody.jpg" id="rightinnerbox" alt="" />
 
          <div id="innerbox">
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a professional software developer.</p>
