Some small details.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <body>
       <div id="box">
 
-         <img src="/i/nathoody.jpg" id="rightinnerbox" alt="" />
+         <img src="/i/nathoody.jpg" id="rightinnerbox" alt="Nat in a hoody in Edinburgh." />
 
          <div id="innerbox">
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a professional software developer.</p>
@@ -43,7 +43,7 @@
                <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url">My Links <small>(on PinBoard)</small></a> </li>
             </ul>
 
-            <p>I am a recent Computer Science graduate from the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly. I am currently employed by <a href="http://getpunchd.com">Punchd Labs Inc.</a>, a division of <a href="http://google.com">Google</a>.</p>
+            <p>I am a recent Computer Science graduate from the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly. I am currently employed by <a href="http://getpunchd.com">Punchd Labs Inc.</a>, a subsidiary of <a href="http://google.com">Google</a>.</p>
          </div>
       </div>
 
