Fix css 3 validation.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <link rel="openid.delegate" href="https://openid.claimid.com/icco" />
 
       <link rel="shortcut icon" href="/favicon.ico">
-      <link rel="stylesheet" href="includes/css/reset.css?v=3">
-      <link rel="stylesheet" href="includes/css/style.css?v=9">
+      <link rel="stylesheet" type="'text/css" href="includes/css/reset.css?v=3">
+      <link rel="stylesheet" type="'text/css" href="includes/css/style.css?v=9">
    </head>
    <body>
       <div id="box">
