--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a professional software developer.</p>
             <p>I am currently <span id='age'>23</span> years old and love to create things. I have a passion for design, communication, and building communities. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
 
-            <p>My persona is scattered across the web in various places, such as: </p>
+            <p>You can check out my <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">resume</a>, some of my favorite <a href="http://icco.github.com" title="My Code on GitHub" rel="me" class="url">projects</a> or photos, or browse my profiles on the internet:</p>
+
             <ul id="melinks">
-               <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url">My Blog</a> </li>
-               <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url">My Photos <small>(on Flickr)</small></a> </li>
-               <li class="sortme" id="link-code"> <a href="http://icco.github.com" title="My Code on GitHub" rel="me" class="url">My Projects <small>(on GitHub)</small></a> </li>
-               <li class="sortme" id="link-resume"> <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">My Resume</a> </li>
-               <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url" >My LinkedIn</a> </li>
-               <li class="sortme" id="link-github"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url">My GitHub</a> </li>
-               <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url">My Twitter</a> </li>
-               <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url">My Last.FM</a> </li>
-               <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url">My Links <small>(on PinBoard)</small></a> </li>
+               <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url"><img src="i/social/blog.png" class="socialicon" /></a> </li>
+               <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url"><img src="i/social/flickr.png" class="socialicon" /></a> </li>
+               <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url"><img src="i/social/linkedin.png" class="socialicon" /></a> </li>
+               <li class="sortme" id="link-github"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url"><img src="i/social/github.png" class="socialicon" /></a> </li>
+               <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url"><img src="i/social/twitter.png" class="socialicon" /></a> </li>
+               <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url"><img src="i/social/lastfm.png" class="socialicon" /></a> </li>
+               <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url"><img src="i/social/pinboard.png" class="socialicon" /></a> </li>
             </ul>
 
             <p>I am a recent Computer Science graduate from the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly. I am currently employed by <a href="http://getpunchd.com">Punchd Labs Inc.</a>, a subsidiary of <a href="http://google.com">Google</a>.</p>
