Updated links and image styles.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a professional software developer.</p>
             <p>I am currently <span id='age'>23</span> years old and love to create things. I have a passion for design, communication, and building communities. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
 
-            <p>You can check out my <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">resume</a>, some of my favorite <a href="http://icco.github.com" title="My Code on GitHub" rel="me" class="url">projects</a> or photos, or browse my profiles on the internet:</p>
+            <p>You can check out my <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">resume</a>, some of my favorite <a href="http://icco.github.com" title="My Code on GitHub" rel="me" class="url">projects</a> or <a href="http://www.flickr.com/photos/icco/sets/72157601200827657/" title="Some of Nat's favorite photos.">photos</a>, or browse my profiles on the internet:</p>
 
             <ul id="melinks">
                <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url"><img src="i/social/blog.png" class="socialicon" /></a> </li>
