Nat Welch dot com version 13.

--- a/index.html
+++ b/index.html
@@ -14,37 +14,45 @@
     <link rel="openid.server"   href="https://openid.claimid.com/server" />
     <link rel="openid.delegate" href="https://openid.claimid.com/icco" />
 
+    <link href='http://fonts.googleapis.com/css?family=Antic+Didone' rel='stylesheet' type='text/css'>
+
     <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="includes/css/reset.css?v=3">
-    <link rel="stylesheet" type="text/css" href="includes/css/style.css?v=12">
+    <link rel="stylesheet" type="text/css" href="includes/css/reset.css?v=4">
+    <link rel="stylesheet" type="text/css" href="includes/css/style.css?v=13">
   </head>
   <body>
     <div id="buffer"> </div>
-    <div id="center">
+
+    <div class="main">
       <h1>Nat Welch</h1>
-      <h3 id="expander"><a onclick="Nat.expand();">Who?</a></h3>
-    </div>
-    <div id="more-data">
-      <div>
-        <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a professional software developer.</p>
-        <p>I am currently <span id='age'>23</span> years old and love to create things. I have a passion for design, communication, and building communities. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
-
-        <p>You can check out my <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">resume</a>, some of my favorite <a href="http://icco.github.com" title="My Code on GitHub" rel="me" class="url">projects</a> or <a href="http://www.flickr.com/photos/icco/sets/72157601200827657/" title="Some of Nat's favorite photos.">photos</a>, or browse my profiles on the internet:</p>
-
-        <ul id="melinks">
-          <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url"><img alt="social icon" src="i/social/blog.png" class="socialicon" /></a> </li>
-          <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url"><img alt="social icon" src="i/social/flickr.png" class="socialicon" /></a> </li>
-          <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url"><img alt="social icon" src="i/social/linkedin.png" class="socialicon" /></a> </li>
-          <li class="sortme" id="link-github"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url"><img alt="social icon" src="i/social/github.png" class="socialicon" /></a> </li>
-          <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url"><img alt="social icon" src="i/social/twitter.png" class="socialicon" /></a> </li>
-          <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url"><img alt="social icon" src="i/social/lastfm.png" class="socialicon" /></a> </li>
-          <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url"><img alt="social icon" src="i/social/pinboard.png" class="socialicon" /></a> </li>
-        </ul>
-
-        <p>I am a recent Computer Science graduate from the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly. I am currently employed by <a href="http://getpunchd.com">Punchd Labs Inc.</a>, a subsidiary of <a href="http://google.com">Google</a>.</p>
-      </div>
     </div>
 
+    <div class="main">
+      <h2>Software Developer</h2>
+    </div>
+
+    <div class="main">
+      <h3>email: <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a>, tel: <a class="tel">707.799.8675</a>, resume: <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">natwelch.com/resume/</a></h3>
+    </div>
+
+    <div class="main">
+      <ul class="melinks">
+        <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url"><img alt="social icon" src="i/social/blog.png" class="socialicon" /></a> </li>
+        <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url"><img alt="social icon" src="i/social/flickr.png" class="socialicon" /></a> </li>
+        <li class="sortme" id="link-github"> <a href="http://icco.github.com" title="Nat Welch on Github" rel="me" class="url"><img alt="social icon" src="i/social/github.png" class="socialicon" /></a> </li>
+        <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url"><img alt="social icon" src="i/social/twitter.png" class="socialicon" /></a> </li>
+      </ul>
+    </div>
+
+    <div class="main">
+      <ul class="melinks">
+        <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url"><img alt="social icon" src="i/social/linkedin.png" class="socialicon" /></a> </li>
+        <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url"><img alt="social icon" src="i/social/lastfm.png" class="socialicon" /></a> </li>
+        <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url"><img alt="social icon" src="i/social/pinboard.png" class="socialicon" /></a> </li>
+      </ul>
+    </div>
+
+    <div style="display: none">age: <span id='age'>24</span></div>
     <!-- TODO: Use a CDN backed by the local store. -->
     <script src="/includes/js/mootools-1.3.2-core.js"></script>
     <script src="/includes/js/mootools-1.3.2.1-more.js"></script>
