--- a/new.html
+++ b/new.html
@@ -6,15 +6,19 @@
     <meta charset="utf-8">
     <title>Nat Welch dot com</title>
 
+    <!-- Meta SEO Shit -->
     <meta name="description" content="The homepage of Nathaniel 'Nat' Welch." />
     <meta name="keywords" content="Nat, welch, natwelch, nathaniel, nathanielwelch, dehn, code, student, developer, software" />
     <meta name="author" content="Nat Welch">
+
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- OPENID Settings -->
     <link rel="openid.server"   href="https://openid.claimid.com/server" />
     <link rel="openid.delegate" href="https://openid.claimid.com/icco" />
 
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
     <link href="http://necolas.github.com/normalize.css/2.1.0/normalize.css" rel="stylesheet">
@@ -26,31 +30,22 @@
     <![endif]-->
   </head>
   <body>
-    <div id="buffer"> </div>
 
-    <div class="main">
-      <h1>Nat Welch</h1>
+    <div id="monogram">
+      <img src="http://www.gravatar.com/avatar/229e3746f6f5100c1d7d5d7a8a5b82d5.jpg" class="gravatar" />
     </div>
 
-    <div class="main">
-      <h2>Software Developer</h2>
-    </div>
+    <div id="about">
+      <p>Nat Welch is randomly clever. He spends his time writing code in an attempt to express these bursts of cleverness.</p>
 
-    <div class="main">
-      <h3>email: <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a>, tel: <a class="tel">707.799.8675</a>, resume: <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">natwelch.com/resume/</a></h3>
-    </div>
+      <p>Professionally, Nat works as an SRE on Google Compute Engine. Previously he worked at Punchd and iFixit.</p>
 
-    <div class="main">
-      <ul class="melinks">
+
+      <ul class="melinks" style="display: none;">
         <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url"><img alt="social icon" src="i/social/blog.png" class="socialicon" /></a> </li>
         <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url"><img alt="social icon" src="i/social/flickr.png" class="socialicon" /></a> </li>
         <li class="sortme" id="link-github"> <a href="http://icco.github.com" title="Nat Welch on Github" rel="me" class="url"><img alt="social icon" src="i/social/github.png" class="socialicon" /></a> </li>
         <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url"><img alt="social icon" src="i/social/twitter.png" class="socialicon" /></a> </li>
-      </ul>
-    </div>
-
-    <div class="main">
-      <ul class="melinks">
         <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url"><img alt="social icon" src="i/social/linkedin.png" class="socialicon" /></a> </li>
         <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url"><img alt="social icon" src="i/social/lastfm.png" class="socialicon" /></a> </li>
         <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url"><img alt="social icon" src="i/social/pinboard.png" class="socialicon" /></a> </li>
@@ -58,10 +53,20 @@
     </div>
 
     <div style="display: none">age: <span id='age'>24</span></div>
+
+    <!--include jquery & backstretch-->
     <!-- TODO: Use a CDN backed by the local store. -->
-    <script src="/includes/js/mootools-1.3.2-core.js"></script>
-    <script src="/includes/js/mootools-1.3.2.1-more.js"></script>
-    <script src="/includes/js/nat.js?v=12"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/includes/js/jquery.backstretch.min.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $(window).resize(function() {
+          if ($(this).width() >= 767) {
+            $.backstretch("/i/christmasalmanornat.jpg", {speed: 150});
+          }
+        }).resize(); //trigger resize on page load
+      });
+    </script>
     <script src="/includes/js/konami.js?v=2"></script>
     <script>
       var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
