fix some js bugs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <p>He also has a <a href="http://twitter.com/icco" title="http://twitter.com/icco">Twitter</a>, a <a href="http://www.last.fm/user/icco/" title="http://www.last.fm/user/icco/">Last.FM</a>, a <a href="http://www.linkedin.com/in/natwelch" title="http://www.linkedin.com/in/natwelch">LinkedIn</a>, a <a href="http://pinboard.in/u:icco" title="http://pinboard.in/u:icco">Pinboard</a> and <a href="mailto:nat@natwelch.com" title="mailto:nat@natwelch.com">an email address</a>.</p>
 
-      <p style="display: none">He is <span id='age'>25</span> years old.</p>
+      <p style="display: none">He is <span id='age'>25</span> old.</p>
     </div>
 
 
@@ -54,7 +54,7 @@
     <!-- TODO: Use a CDN backed by the local store. -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="/includes/js/jquery.backstretch.min.js"></script>
-    <script type="text/javascript" src="/includes/js/konami.js?v=2"></script>
+    <script type="text/javascript" src="https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"></script>
     <script type="text/javascript" src="/includes/js/nat.js?v=20130226"></script>
     <script>
       var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
