--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- CSS -->
     <link href="http://necolas.github.com/normalize.css/2.1.0/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/includes/css/new.css?v=14">
+    <link href="/includes/css/new.css?v=14" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
