--- a/index.html
+++ b/index.html
@@ -35,20 +35,28 @@
       <img src="http://www.gravatar.com/avatar/229e3746f6f5100c1d7d5d7a8a5b82d5.jpg" class="gravatar" />
     </div>
 
-    <div id="about">
+    <div class="block" id="nav">
+      <ul class="nav">
+        <li>About</li>
+        <li><a href="#">Projects</a></li>
+      </ul>
+    </div>
+
+    <div class="block" id="about">
       <p>Nat Welch likes to think of himself as <a href="http://quotes.natwelch.com" title="http://quotes.natwelch.com">randomly clever</a>. He spends his time writing code in an attempt to express these bursts of cleverness. He usually fails.</p>
 
       <p>Professionally, Nat works as an <a href="http://research.google.com/pubs/pub32583.html" title="http://research.google.com/pubs/pub32583.html">SRE</a> on <a href="https://cloud.google.com/products/compute-engine" title="https://cloud.google.com/products/compute-engine">Google Compute Engine</a>. Previously he worked at <a href="http://getpunchd.com" title="http://getpunchd.com">Punchd</a> and <a href="http://ifixit.com" title="http://ifixit.com">iFixit</a>.</p>
 
       <p>In his free time, Nat has been called an <a href="http://en.wikipedia.org/wiki/Open_source" title="http://en.wikipedia.org/wiki/Open_source">Open Source</a> <a href="http://queue.acm.org/detail.cfm?id=1005079" title="http://queue.acm.org/detail.cfm?id=1005079">"bigot"</a>. He publishes most of his code and side projects on <a href="http://github.com/icco" title="http://github.com/icco">GitHub</a>. He posts his long form thoughts on <a href="http://pseudoweb.net" title="http://pseudoweb.net">Pseudoweb.net</a>, his short form thoughts on <a href="http://tumble.io" title="http://tumble.io">Tumble.io</a>, and all of his photography on <a href="http://flickr.com/photos/icco" title="http://flickr.com/photos/icco">Flickr</a>.</p>
 
-      <p>Some projects he has been working on lately include <a href="http://code.natwelch.com" title="http://code.natwelch.com">code</a>, <a href="http://walls.natwelch.com" title="http://walls.natwelch.com">wallpapers</a>, <a href="http://nabdash.me" title="http://nabdash.me">nabdash</a> and <a href="http://github.com/icco/tumble" title="http://github.com/icco/tumble">tumble</a>.</p>
-
       <p>He also has a <a href="http://twitter.com/icco" title="http://twitter.com/icco">Twitter</a>, a <a href="http://www.last.fm/user/icco/" title="http://www.last.fm/user/icco/">Last.FM</a>, a <a href="http://www.linkedin.com/in/natwelch" title="http://www.linkedin.com/in/natwelch">LinkedIn</a>, a <a href="http://pinboard.in/u:icco" title="http://pinboard.in/u:icco">Pinboard</a> and <a href="mailto:nat@natwelch.com" title="mailto:nat@natwelch.com">an email address</a>.</p>
 
       <p style="display: none">He is <span id='age'>25</span> old.</p>
     </div>
 
+    <div class="block" id="projects" style="display: none;">
+      <p>Some projects Nat has been working on lately include <a href="http://code.natwelch.com" title="http://code.natwelch.com">code</a>, <a href="http://walls.natwelch.com" title="http://walls.natwelch.com">wallpapers</a>, <a href="http://nabdash.me" title="http://nabdash.me">nabdash</a> and <a href="http://github.com/icco/tumble" title="http://github.com/icco/tumble">tumble</a>.</p>
+    </div>
 
     <!--include jquery & backstretch-->
     <!-- TODO: Use a CDN backed by the local store. -->
