--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
 
     <div id="monogram">
-      <img src="http://www.gravatar.com/avatar/229e3746f6f5100c1d7d5d7a8a5b82d5.jpg" class="gravatar" />
+      <img alt="Nat's Avatar!" src="http://www.gravatar.com/avatar/229e3746f6f5100c1d7d5d7a8a5b82d5.jpg" class="gravatar" />
     </div>
 
     <div id="about">
