moment to local

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
-    <link href="http://necolas.github.com/normalize.css/2.1.0/normalize.css" rel="stylesheet">
+    <link href="//necolas.github.com/normalize.css/2.1.0/normalize.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/includes/css/new.css?v=14">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -54,9 +54,9 @@
 
     <!--include jquery & backstretch-->
     <!-- TODO: Use a CDN backed by the local store. -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="/includes/js/jquery.backstretch.min.js"></script>
-    <script type="text/javascript" src="https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"></script>
+    <script type="text/javascript" src="/includes/js/moment.min.js"></script>
     <script type="text/javascript" src="/includes/js/nat.js?v=20130226"></script>
     <script>
       var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
