--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div id="about">
-      <p>Nat Welch likes to think of himself as <a href="http://quotes.natwelch.com" title="http://quotes.natwelch.com">randomly clever</a>. He spends his time writing code in an attempt to express these bursts of cleverness. He usually fails.</p>
+      <p><abbr title="Nathaniel">Nat</abbr> Welch likes to think of himself as <a href="http://quotes.natwelch.com" title="http://quotes.natwelch.com">randomly clever</a>. He spends his time writing code in an attempt to express these bursts of cleverness. He usually fails.</p>
 
       <p>Professionally, Nat works as an <a href="http://research.google.com/pubs/pub32583.html" title="http://research.google.com/pubs/pub32583.html">SRE</a> on <a href="https://cloud.google.com/products/compute-engine" title="https://cloud.google.com/products/compute-engine">Google Compute Engine</a>. Previously he worked at <a href="http://getpunchd.com" title="http://getpunchd.com">Punchd</a> and <a href="http://ifixit.com" title="http://ifixit.com">iFixit</a>.</p>
 
