--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
         s.parentNode.insertBefore(g, s);
       })(document, 'script');
     </script>
+    <script type="text/javascript">
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '5213bb1df5a1f5312100001b');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
+    </script>
     <!-- Copyright Nat Welch 2013 -->
   </body>
 </html>
