--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <p>Some projects he has been working on lately include <a href="http://code.natwelch.com" title="http://code.natwelch.com">code</a>, <a href="http://walls.natwelch.com" title="http://walls.natwelch.com">wallpapers</a>, <a href="http://nabdash.me" title="http://nabdash.me">nabdash</a> and <a href="http://github.com/icco/tumble" title="http://github.com/icco/tumble">tumble</a>.</p>
 
-        <p>He also has a <a href="https://twitter.com/icco" title="http://twitter.com/icco" rel="me">Twitter</a>, a <a rel="me" href="http://www.last.fm/user/icco/" title="http://www.last.fm/user/icco/">Last.FM</a>, a <a rel="me" href="http://www.linkedin.com/in/natwelch" title="http://www.linkedin.com/in/natwelch">LinkedIn</a>, a <a rel="me" href="http://pinboard.in/u:icco" title="http://pinboard.in/u:icco">Pinboard</a> and <a rel="me" href="mailto:nat@natwelch.com" title="mailto:nat@natwelch.com" class="u-email">an email address</a>.</p>
+        <p>He also has a <a href="https://twitter.com/icco" title="http://twitter.com/icco" rel="me">Twitter</a>, a <a rel="me" href="http://www.last.fm/user/icco/" title="http://www.last.fm/user/icco/">Last.FM</a>, a <a rel="me" href="http://www.linkedin.com/in/natwelch" title="http://www.linkedin.com/in/natwelch">LinkedIn</a>, a <a rel="me" href="http://pinboard.in/u:icco" title="http://pinboard.in/u:icco">Pinboard</a>, a <a rel="me" href="http://google.com/+NatWelch">Google+</a> and <a rel="me" href="mailto:nat@natwelch.com" title="mailto:nat@natwelch.com" class="u-email">an email address</a>.</p>
 
         <p style="display: none">He is <span id='age'>25</span> old.</p>
       </div>
