Step one of v15

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
-    <link href="//necolas.github.com/normalize.css/2.1.0/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/includes/css/new.css?v=14">
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/css/new.css?v=15">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -55,10 +55,10 @@
 
     <!--include jquery & backstretch-->
     <!-- TODO: Use a CDN backed by the local store. -->
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="/includes/js/jquery.backstretch.min.js"></script>
-    <script type="text/javascript" src="/includes/js/moment.min.js"></script>
-    <script type="text/javascript" src="/includes/js/nat.js?v=20130226"></script>
+    <script type="text/javascript" src="/js/jquery.1.7.2.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.backstretch.min.js"></script>
+    <script type="text/javascript" src="/js/moment.min.js"></script>
+    <script type="text/javascript" src="/js/nat.js?v=20130226"></script>
     <script>
       var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
       (function(d, t) {
