--- a/index.html
+++ b/index.html
@@ -30,35 +30,18 @@
     <![endif]-->
   </head>
   <body>
-    <div class="h-card">
-      <div id="monogram">
-        <img alt="Nat's Avatar!" src="http://www.gravatar.com/avatar/229e3746f6f5100c1d7d5d7a8a5b82d5.jpg" class="gravatar u-photo" />
-      </div>
-
-      <div id="about">
-        <p><span class="p-name"><abbr title="Nathaniel">Nat</abbr> Welch</span> likes to think of himself as <a href="http://quotes.natwelch.com" title="http://quotes.natwelch.com">randomly clever</a>. He spends his time writing code in an attempt to express these bursts of cleverness. He usually fails.</p>
-
-        <p>Professionally, Nat works as an <a href="http://research.google.com/pubs/pub32583.html" title="http://research.google.com/pubs/pub32583.html">SRE</a> on <a href="https://cloud.google.com/products/compute-engine" title="https://cloud.google.com/products/compute-engine">Google Compute Engine</a>. Previously he worked at <a href="http://getpunchd.com" title="http://getpunchd.com">Punchd</a> and <a href="http://ifixit.com" title="http://ifixit.com">iFixit</a>. You can read more about this on his <a rel="me" href="http://natwelch.com/resume">resume</a>.</p>
-
-        <p>In his free time, Nat has been called an <a href="http://en.wikipedia.org/wiki/Open_source" title="http://en.wikipedia.org/wiki/Open_source">Open Source</a> <a href="http://queue.acm.org/detail.cfm?id=1005079" title="http://queue.acm.org/detail.cfm?id=1005079">"bigot"</a>, but in reality, he is just passionate about sharing.</p>
-
-        <p>Nat publishes most of his code and side projects on <a rel="me" href="https://github.com/icco" title="http://github.com/icco">GitHub</a>. He posts his long form thoughts on <a rel="me" href="http://pseudoweb.net" title="http://pseudoweb.net">Pseudoweb.net</a>, his short form thoughts on <a rel="me" href="http://tumble.io" title="http://tumble.io">Tumble.io</a>, and all of his photography on <a rel="me" href="http://flickr.com/photos/icco" title="http://flickr.com/photos/icco">Flickr</a>.</p>
-
-        <p>Some projects he has been working on lately include <a href="http://code.natwelch.com" title="http://code.natwelch.com">code</a>, <a href="http://walls.natwelch.com" title="http://walls.natwelch.com">wallpapers</a>, <a href="http://nabdash.me" title="http://nabdash.me">nabdash</a> and <a href="http://github.com/icco/tumble" title="http://github.com/icco/tumble">tumble</a>.</p>
-
-        <p>He also has a <a href="https://twitter.com/icco" title="http://twitter.com/icco" rel="me">Twitter</a>, a <a rel="me" href="http://www.last.fm/user/icco/" title="http://www.last.fm/user/icco/">Last.FM</a>, a <a rel="me" href="http://www.linkedin.com/in/natwelch" title="http://www.linkedin.com/in/natwelch">LinkedIn</a>, a <a rel="me" href="http://pinboard.in/u:icco" title="http://pinboard.in/u:icco">Pinboard</a>, a <a rel="me" href="http://google.com/+NatWelch">Google+</a> and <a rel="me" href="mailto:nat@natwelch.com" title="mailto:nat@natwelch.com" class="u-email">an email address</a>.</p>
-
-        <p style="display: none">He is <span id='age'>25</span> old.</p>
-      </div>
+    <div class="content h-card">
+      <h1 class="name-plate">Nat Welch</h1>
     </div>
 
 
-    <!--include jquery & backstretch-->
+    <!--include JS -->
     <!-- TODO: Use a CDN backed by the local store. -->
     <script type="text/javascript" src="/js/jquery.1.7.2.min.js"></script>
     <script type="text/javascript" src="/js/jquery.backstretch.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.lettering.js"></script>
     <script type="text/javascript" src="/js/moment.min.js"></script>
-    <script type="text/javascript" src="/js/nat.js?v=20130226"></script>
+    <script type="text/javascript" src="/js/nat.js?v=v15"></script>
     <script>
       var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
       (function(d, t) {
