--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
       <h1 class="name-plate">Nat Welch</h1>
 
       <div class="text">
-        Nat is a Site Reliability Engineer at Google. He has worked at great companies such as iFixit, Punchd and Adobe in the past doing all kinds of programming. Nat loves to research and play with the interaction between communication and design. When he is not coding, he tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
+        Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. Nat loves to research and play with the interaction between communication and design. When he is not coding, he tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
+      </div>
+
+      <div class="text">
+        You can contact Nat in the following places:
+        <ul>
+          <li>nat@natwelch.com</li>
+          <li>icco on <a href="http://github.com/icco">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco">Twitter</a></li>
+          <li>Nat W on <a href="http://www.flickr.com/photos/icco/">Flickr</a></li>
+        </ul>
       </div>
     </div>
 
