--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1 class="name-plate">Nat Welch</h1>
 
       <div class="text">
-        Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. Nat loves to research and play with the interaction between communication and design. When he is not coding, he tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
+        Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. Nat loves to research and play with the interaction between communication and design. When he is not coding, he tends to be listening to music and wandering the city looking for a coffee shop to read and write in. He is originally from the San Francisco Bay Area, but now lives in London.
       </div>
 
       <div class="text">
@@ -46,7 +46,6 @@
         </ul>
       </div>
     </div>
-
 
     <!--include JS -->
     <!-- TODO: Use a CDN backed by the local store. -->
