--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="text">
-        You can contact Nat in the following places:
+        Nat is scattered across the internet:
         <ul>
           <li>nat@natwelch.com</li>
           <li>icco on <a href="http://github.com/icco">Github</a>, <a href="irc://chat.freenode.net/#devcloud">Freenode</a> &amp; <a href="http://twitter.com/icco">Twitter</a></li>
