add a projects section.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
           <li>Nat W on <a href="http://www.flickr.com/photos/icco/">Flickr</a></li>
         </ul>
       </div>
+
+      <div class="text">
+        Some projects Nat has worked on include
+        <ul class="sentence">
+          <li><a href="http://tumble.io">Tumble.io</a></li>
+          <li><a href="http://pseudoweb.net">pseudoweb.net</a></li>
+          <li><a href="http://fog.io">Fog</a></li>
+          <li><a href="http://sadnat.com">sadnat.com</a></li>
+          <li><a href="http://cloud.google.com/compute">GCE</a></li>
+          <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
+          <li><a href="http://quotes.natwelch.com">Quotes</a></li>
+          <li><a href="http://Artisan.fm">Artisan.FM</a></li>
+          <li><a href="http://pgp.io">pgp.io</a></li>
+        </ul>.
     </div>
 
     <!--include JS -->
