--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
         s.parentNode.insertBefore(t, s);
       })();
     </script>
-    <!-- Copyright Nat Welch 2013 -->
+    <!-- Copyright Nat Welch 2003 - 2014 -->
   </body>
 </html>
