last box left align

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
       </div>
 
-      <div class="text">
+      <div class="text" style="text-align: left;">
         Some projects Nat has worked on include
         <ul class="sentence">
           <li><a href="http://tumble.io">Tumble.io</a></li>
