add support links

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </div>
 
       <div class="text" style="text-align: left;">
+        <p>
         Some projects Nat has worked on include
         <ul class="sentence">
           <li><a href="http://tumble.io">Tumble.io</a></li>
@@ -57,8 +58,18 @@
           <li><a href="http://ifixit.com/Answers">iFixit Answers</a></li>
           <li><a href="http://quotes.natwelch.com">Quotes</a></li>
           <li><a href="http://Artisan.fm">Artisan.FM</a></li>
-          <li><a href="http://pgp.io">pgp.io</a></li>
-        </ul>.
+          <li><a href="http://pgp.io">pgp.io</a>.</li>
+        </ul>
+        </p>
+
+        <p style="padding-top: 20px;">
+        Support my projects:
+        <ul>
+          <li><a href="https://www.gittip.com/icco/">GitTip - @icco</a></li>
+          <li>BTC: 1ADE7f7WePGEpki3UqrUhRcgrcNyDDc8eq</li>
+        </ul>
+        </p>
+      </div>
     </div>
 
     <!--include JS -->
