change where I live and padding on project list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
       <h1 class="name-plate">Nat Welch</h1>
 
       <div class="text">
-        Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in. Originally from the San Francisco Bay Area, Nat now lives in London.
+        Nat is a Site Reliability Engineer at <a href="http://cloud.google.com">Google</a>. He has worked at great companies such as <a href="http://ifixit.com">iFixit</a>, <a href="http://getpunchd.com">Punchd</a> and <a href="http://www.adobe.com/products/dreamweaver.html">Adobe</a> in the past doing all kinds of programming. At work and while at play, Nat loves to explore the interaction between communication and design using software. When he is not coding, Nat tends to be listening to music and wandering the city looking for a coffee shop to read and write in.
+        <!--
+        Originally from the San Francisco Bay Area, Nat now lives in London.
+        -->
+        Nat lives in San Francisco.
       </div>
 
       <div class="text">
@@ -47,7 +51,6 @@
       </div>
 
       <div class="text" style="text-align: left;">
-        <p>
         Some projects Nat has worked on include
         <ul class="sentence">
           <li><a href="http://tumble.io">Tumble.io</a></li>
@@ -60,7 +63,6 @@
           <li><a href="http://Artisan.fm">Artisan.FM</a></li>
           <li><a href="http://pgp.io">pgp.io</a>.</li>
         </ul>
-        </p>
 
         <p style="padding-top: 20px;">
         Support my projects:
