--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/css/new.css?v=15">
+    <link rel="stylesheet" type="text/css" href="/css/style.css?v=15">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
