--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         Support my projects:
         <ul>
           <li><a href="https://www.gittip.com/icco/">GitTip - @icco</a></li>
-          <li>BTC: 1ADE7f7WePGEpki3UqrUhRcgrcNyDDc8eq</li>
+          <li>BTC: 1ADE7f7WePGEpki3&shy;UqrUhRcgrcNyDDc8eq</li>
         </ul>
         </p>
       </div>
